[package]
name = "itm-decode"
version = "0.7.0"
keywords = ["parse", "ARM", "ITM"]
documentation = "https://docs.rs/itm"
authors = [
        "Viktor Sonesten <v@tmplt.dev>",
]
edition = "2021"
readme = "../README.md"
repository = "https://github.com/rtic-scope/itm"
license = "MIT OR Apache-2.0"
description = "A decoding tool for the ARM Cortex-M ITM/DWT packet protocol"

[dependencies]
itm = { version = "0.7.0", path = "../itm", features = [ "serial" ] }
anyhow = "1.0"
structopt = "0.3"
