[package]
name = "itm"
version = "0.7.0"
keywords = ["parse", "ARM", "ITM"]
documentation = "https://docs.rs/itm"
authors = [
        "Viktor Sonesten <v@tmplt.dev>",
]
edition = "2021"
readme = "../README.md"
repository = "https://github.com/rtic-scope/itm"
license = "MIT OR Apache-2.0"
description = "A decoding library for the ARM Cortex-M ITM/DWT packet protocol"

[dependencies]
bitmatch = "0.1.1"
bitvec = "0.22"
thiserror = "1"

[dependencies.serde]
version = "1"
features = [ "derive" ]
optional = true

[dependencies.nix]
version = "0.23"
git = "https://github.com/rtic-scope/nix.git"
branch = "feat/termios-linux-arbitrary"
optional = true

[dependencies.cortex-m]
version = "0.7"
git = "https://github.com/rtic-scope/cortex-m"
branch = "rtic-scope"
features = ["serde"]

[features]
default = []
serial = ["nix"]
